stop gap

--- a/core/static/css/styles.css
+++ b/core/static/css/styles.css
@@ -73,7 +73,7 @@ a {
     border-left: 10px solid rgb(106, 113, 130);
     /* border-bottom: 5px solid darkgray; */
     border-top: 10px solid rgb(199, 212, 242);
-    border-right: 5px solid white;
+    border-right: 1px solid white;
     border-top-right-radius: 5%;
     border-bottom-left-radius: 5%;
     border-bottom-right-radius: 5%;
